--- a/templates/form.html
+++ b/templates/form.html
@@ -1,5 +1,83 @@
 <html>
-<body>
+  <style>
+    /* Style for form container */
+form {
+  max-width: 500px;
+  margin: 0 auto;
+  font-family: Arial, sans-serif;
+  font-size: 16px;
+  color: #333;
+}
+
+
+/* Style for form labels */
+label {
+  display: block;
+  margin-bottom: 5px;
+  font-weight: bold;
+}
+
+/* Style for form input fields */
+input[type="text"],
+select {
+  display: block;
+  width: 100%;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  margin-bottom: 20px;
+}
+
+.images{
+  background-image: url('https://www.diamondbuyingschool.com/wp-content/uploads/2020/11/diamonds_lightbluebackground_16x9.jpg');
+  background-size: cover;
+}
+
+/* Style for submit button */
+input[type="submit"] {
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+/* Style for form group */
+.form-group {
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+select{
+  outline: none;
+  border-color: #1E90FF;
+  box-shadow: 0 0 5px rgba(30, 144, 255, 0.5);
+}
+
+input{
+  outline: none;
+  border-color: #1E90FF;
+  box-shadow: 0 0 5px rgba(30, 144, 255, 0.5);
+}
+
+/* Style for select elements */
+select {
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="10" height="5"><path fill="%23333" d="M0 0l5 5 5-5z"/></svg>');
+  background-repeat: no-repeat;
+  background-position: right 10px top 50%;
+  background-size: 10px auto;
+}
+
+  </style>
+<body class="images">
 <form action="{{url_for('predict_datapoint')}}" method="POST">
     <div class="form-group">
         <label for="carat">Carat:</label>
