--- a/templates/trainingResult.html
+++ b/templates/trainingResult.html
@@ -1,4 +1,78 @@
-<h1>{{final_model}}</h1>
-<h1>{{final_score}}%</h1>
-<h1>{{final_flag}}</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <title>Document</title> -->
+</head>
 
+<style>
+    h1 {
+        text-align: center;
+        font-size: 3em;
+        margin-top: 50px;
+    }
+
+    #score {
+        color: green;
+    }
+
+    #flag {
+        font-size: 1.5em;
+        margin-top: 30px;
+        text-align: center;
+    }
+
+    .btn {
+        align-content: center;
+        display: flex;
+        justify-content: center;
+    }
+
+    button {
+        margin: 10px;
+        padding: 10px 20px;
+        border: none;
+        border-radius: 5px;
+        background-color: #007bff;
+        color: #fff;
+        font-size: 16px;
+        font-weight: bold;
+        text-decoration: none;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+    }
+
+
+    body{
+        background-image: url('https://www.diamondbuyingschool.com/wp-content/uploads/2020/11/diamonds_lightbluebackground_16x9.jpg');
+        background-size: cover;
+    }
+
+
+    button:hover {
+        background-color: #0056b3;
+    }
+</style>
+
+<body>
+
+    <div style="background-color: #f5f5f5; padding: 20px; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%);">
+
+        <div style="background-color: #fff; border: 1px solid #ddd; padding: 10px; margin-bottom: 30px;">
+    
+            <h1>{{final_model}}</h1>
+            <h1 id="score">{{final_score}}%</h1>
+            <h4>{{final_st}}</h4>
+            
+            
+            <div class="btn">
+                <button>
+                    <a href="/predict">Testing</a>
+                </button>
+            </div>
+        </div>
+    </div>
+</body>
+</html>
